# assignment

./: .gitignore  Makefile  README  README.md  docker-compose.yaml
assignment-api/: Dockerfile  pyproject.toml
assignment-api/scripts/: start_api.sh
assignment-api/src/domain/: chess_problem.py  string_problem.py
assignment-api/src/infrastructure/: db.sqlite3
assignment-api/src/infrastructure/api/routes/: urls.py
assignment-api/src/infrastructure/api/routes/problem/: routers.py  urls.py
assignment-api/src/infrastructure/api/views/: problem.py
assignment-api/src/infrastructure/factories/: problem.py
assignment-api/src/infrastructure/server/: asgi.py  urls.py  wsgi.py
assignment-api/src/infrastructure/settings/: base.py
assignment-api/src/interface/controllers/: problem.py
assignment-api/src/interface/repositories/: problem.py
assignment-api/src/interface/routes/: constants.py  problem.py
assignment-api/src/interface/serializers/: problem.py
assignment-api/src/usecases/: problem.py
assignment-ui/: package-lock.json  package.json
assignment-ui/src/app/problem-1/: page.tsx
assignment-ui/src/app/problem-2/: page.tsx
assignment-ui/src/data/model/dto/: problem.ts
assignment-ui/src/data/repository/: index.ts
assignment-ui/src/data/repository/problem/: ProblemDataSource.ts  ProblemDataSourceImpl.ts  ProblemRepository.ts
assignment-ui/src/presentation/pages/problem-1/: Problem1.tsx  Problem1ViewModel.ts
assignment-ui/src/presentation/pages/problem-2/: Problem2.tsx  Problem2ViewModel.ts
